Increase the breakpoint for small screen media query to fix nav spilling out of container

--- a/styles/main.css
+++ b/styles/main.css
@@ -195,7 +195,7 @@ figcaption {
 }
 
 /* Handling different screen sizes */
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   html {
     font-size: 12px;
   }
